--- a/index.html
+++ b/index.html
@@ -153,7 +153,73 @@ Rate of fire: 700–750 rounds/min<br>
 Sights: Modified M14 iron sights, normally used with a magnifying scope<br>
 Wars: War in Afghanistan; Iraq War; Syrian Civil War; Iraqi Civil War (2014–2017); Russo-Ukrainian War </p>
 <img src="">
-<p><font color="red">AK47</font> <br></p>
+<p><font color="red">AK47</font>Type
+Assault rifle<br>
+Place of origin<br>
+Soviet Union<br>
+Service history<br>
+In service<br>
+1949–1974 (Soviet Union)<br>
+1949–present (other countries)<br>
+Used by<br>
+See Users<br>
+Wars<br>
+See Conflicts<br>
+Production history<br>
+Designer<br>
+Mikhail Kalashnikov<br>
+Designed<br>
+1946–1948[1]<br>
+Manufacturer<br>
+Kalashnikov Concern and various others including Norinco<br>
+Produced<br>
+1948–present[2][3]<br>
+No. built<br>
+≈ 75 million AK-47s, 100 million Kalashnikov-family weapons.[4][5]<br>
+Variants<br>
+See Variants<br>
+Specifications (AK-47 with Type 3 receiver)<br>
+Mass<br>
+Without magazine:<br>
+3.47 kg (7.7 lb)<br>
+Magazine, empty:<br>
+0.43 kg (0.95 lb) (early issue)[6]<br>
+0.33 kg (0.73 lb) (steel)[7]<br>
+0.25 kg (0.55 lb) (plastic)[8]<br>
+0.17 kg (0.37 lb) (light alloy)[7]<br>
+Length<br>
+Fixed wooden stock:<br>
+880 mm (35 in)[8]<br>
+875 mm (34.4 in) (folding stock extended)<br>
+645 mm (25.4 in) (stock folded)[6]<br>
+Barrel length<br>
+Overall length:<br>
+415 mm (16.3 in)[8]<br>
+Rifled bore length:<br>
+369 mm (14.5 in)[8]<br>
+Cartridge<br>
+7.62×39mm<br>
+Action<br>
+Gas-operated, closed rotating bolt<br>
+Rate of fire<br>
+Cyclic rate:<br>
+600 rounds/min[8]<br>
+Practical rate:<br>
+Semi-automatic:<br>
+40 rounds/min[8]<br>
+Bursts/ Fully automatic:<br>
+100 rounds/min[8]<br>
+Muzzle velocity<br>
+715 m/s (2,350 ft/s)[8]<br>
+Effective firing range<br>
+350 m (380 yd)[8]<br>
+Feed system<br>
+20-round, 30-round detachable box magazine[8],<br>
+40-round, 75-round drum magazines also available<br>
+Sights<br>
+100–800 m adjustable iron sights<br>
+Sight radius:<br>
+378 mm (14.9 in)[8] <br></p><br>
 <img src="">
 <p><font color="red">FAD</font> <br></p>
 <img src="">
