--- a/index.html
+++ b/index.html
@@ -407,9 +407,97 @@ Feed system<br>
 64-round helical magazine<br>
 32-round box magazine <br></p>
 <img src="">
-<p><font color="red">P90</font> <br></p>
+<p><font color="red">P90</font><br>Type
+Submachine gun<br>
+Personal defense weapon<br>
+Place of origin<br>
+Belgium<br>
+Service history<br>
+In service<br>
+1990–present<br>
+Used by<br>
+See Users<br>
+Wars<br>
+Internal conflict in Peru<br>
+War in Afghanistan<br>
+Iraq War<br>
+Mexican Drug War[1]<br>
+Libyan Civil War[2]<br>
+Production history<br>
+Designed<br>
+1986–90[3]<br>
+Manufacturer<br>
+FN Herstal<br>
+Produced<br>
+1990–present[4]<br>
+Variants<br>
+See Variants<br>
+Specifications<br>
+Mass<br>
+2.6 kg (5.8 lb) (P90)[5]<br>
+2.85 kg (6.28 lb) (PS90)[6]<br>
+Length<br>
+50.5 cm (19.9 in) (P90)[5]<br>
+66.6 cm (26.2 in) (PS90)[6]<br>
+Barrel length<br>
+26.4 cm (10.4 in) (P90)[5]<br>
+40.7 cm (16.0 in) (PS90)[6]<br>
+Width<br>
+5.5 cm (2.2 in)[7]<br>
+Height<br>
+21 cm (8.3 in)[7]<br>
+Cartridge<br>
+FN 5.7×28mm[8]<br>
+Action<br>
+Straight blowback, closed bolt[8]<br>
+Rate of fire<br>
+850–1,100 rounds/min[7]<br>
+Muzzle velocity<br>
+715 m/s (2,350 ft/s)[7]<br>
+Effective firing range<br>
+200 m (660 ft)[7]<br>
+Maximum firing range<br>
+1,800 m (5,900 ft)[7]<br>
+Feed system<br>
+50-round detachable box magazine[8]<br>
+Sights<br>
+Tritium-illuminated reflex sight, back-up iron sights[7] <br></p>
 <img src="">
-<p><font color="red">PM9</font><br> </p>
+<p><font color="red">PM9</font><br>Type
+Machine pistol<br>
+Place of origin<br>
+Japan<br>
+Service history<br>
+In service<br>
+1990–Present<br>
+Used by<br>
+Japan<br>
+Production history<br>
+Manufacturer<br>
+Minebea Co.<br>
+Unit cost<br>
+2540$<br>
+Produced<br>
+1990 – Present<br>
+Specifications<br>
+Mass<br>
+2.8 kg / 6.2 lbs[1]<br>
+Length<br>
+399 mm / 15.7"[2]<br>
+Barrel length<br>
+120 mm / 4.7"[2]<br>
+Cartridge<br>
+9×19mm Parabellum<br>
+Action<br>
+Blowback<br>
+Rate of fire<br>
+1100 RPM[1]<br>
+Effective firing range<br>
+100 m<br>
+Feed system<br>
+25-Round Magazine[1]<br>
+Sights<br>
+Iron sights <br></p>
 <img src="">
 <p><font color="red">MP7</font> <br></p>
 <img src="">
