--- a/index.html
+++ b/index.html
@@ -499,7 +499,53 @@ Feed system<br>
 Sights<br>
 Iron sights <br></p>
 <img src="">
-<p><font color="red">MP7</font> <br></p>
+<p><font color="red">MP7</font> <br>Type
+Personal defense weapon<br>
+Submachine gun<br>
+Place of origin<br>
+Germany<br>
+Service history<br>
+In service<br>
+2001–present<br>
+Used by<br>
+20+ countries (see Users)<br>
+Wars<br>
+War in Afghanistan<br>
+Iraq War<br>
+Operation Inherent Resolve<br>
+Operation Neptune Spear<br>
+Papua Conflict[1]<br>
+Production history<br>
+Manufacturer<br>
+Heckler & Koch<br>
+Produced<br>
+1999–present<br>
+Specifications<br>
+Mass<br>
+1.90 kg (4.2 lb) with 20-round empty magazine (PDW)<br>
+2.10 kg (4.63 lb) with magazine (MP7A1)[2]<br>
+Length<br>
+638 mm (25.1 in) stock extended / 415 mm (16.3 in) stock collapsed[3]<br>
+Barrel length<br>
+180 mm (7.1 in)[4]<br>
+Width<br>
+51 mm (2.0 in)[3]<br>
+Height<br>
+169.5 mm (6.7 in)[3]<br>
+Cartridge<br>
+HK 4.6×30mm<br>
+Action<br>
+Gas-operated, short stroke piston, rotating bolt<br>
+Rate of fire<br>
+950 rounds/min<br>
+Muzzle velocity<br>
+735 m/s (2,411 ft/s) (Fiocchi CPS Black Tip ammunition)<br>
+Effective firing range<br>
+200 m (660 ft)[5][6]<br>
+Feed system<br>
+20-, 30- or 40-round detachable box magazine<br>
+Sights<br>
+Tritium-illuminated flip-up night sights; handgun and rifle sights (adjustable)<br></p>
 <img src="">
 <p><font color="red">AK740</font><br> </p>
 <img src="">
