--- a/index.html
+++ b/index.html
@@ -547,9 +547,72 @@ Feed system<br>
 Sights<br>
 Tritium-illuminated flip-up night sights; handgun and rifle sights (adjustable)<br></p>
 <img src="">
-<p><font color="red">AK740</font><br> </p>
-<img src="">
-<p><font color="red">L86LSW</font> <br></p>
+<p><font color="red">AK740</font><br>Rate of fire
+Cyclic: 650 rounds/min[7]<br>
+Practical: 100 rounds/min[8]<br>
+Muzzle velocity<br>
+880–900 m/s (2,887–2,953 ft/s)[8][7]<br>
+Effective firing range<br>
+500 m (550 yd) (AK-74, AKS-74, AK-74M point target)<br>
+800 m (870 yd) (AK-74, AKS-74, AK-74M area target)[8]<br>
+Maximum firing range<br>
+3,150 m (3,440 yd)<br>
+Feed system<br>
+30-round AK-74 and 45-round RPK-74 detachable box magazine, 60-round casket magazine and 96-round RPK-16 drum magazines<br>
+Sights<br>
+Adjustable iron sights, front post and rear notch on a scaled tangent <br></p>
+<img src="https://en.m.wikipedia.org/wiki/File:SA80_A2_(L85A2)_5.56mm_Rifle_MOD_45162150.jpg">
+<p><font color="red">L86LSW</font><br>Type
+Bullpup assault rifle<br>
+Light support weapon (L86 LSW)<br>
+Carbine (L22)<br>
+Place of origin<br>
+United Kingdom<br>
+Service history<br>
+In service<br>
+1985–present<br>
+Used by<br>
+See Users<br>
+Wars<br>
+See Conflicts<br>
+Production history<br>
+Designed<br>
+1970s–1980s<br>
+Manufacturer<br>
+RSAF Enfield, Royal Ordnance, Heckler and Koch<br>
+Unit cost<br>
+£1,300 (2015)[1]<br>
+Produced<br>
+1985–1994<br>
+No. built<br>
+Approx. 350,000 (L85, L86)<br>
+Approx. 21,700 (L98)<br>
+Variants<br>
+See Variants<br>
+Specifications (L85A2)<br>
+Mass<br>
+4.98 kilograms (11.0 lb) (L85A2 with SUSAT sight and loaded 30-round magazine)[2]<br>
+Length<br>
+785 millimetres (30.9 in) (L85A2)[2]<br>
+Barrel length<br>
+518 millimetres (20.4 in) (L85A2)[2]<br>
+Cartridge<br>
+5.56×45mm NATO<br>
+Calibre<br>
+5.56mm<br>
+Action<br>
+Gas-operated, rotating bolt<br>
+Rate of fire<br>
+610–775 rpm[2]<br>
+Muzzle velocity<br>
+930–940 m/s (3,100–3,100 ft/s)[2]<br>
+Effective firing range<br>
+300–1,200 m depending on weapon on usage[2][3][4]<br>
+Feed system<br>
+30-round detachable STANAG magazine<br>
+30-round detachable polymer Magpul EMAG<br>
+Sights<br>
+Telescopic SUSAT, ACOG and ELCAN LDS scopes, aperture iron sights<br></p>
 <img src="">
 <p><font color="red">MG36</font> <br></p>
 <img src="">
