--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ Feed system<br>
 30-round AK-74 and 45-round RPK-74 detachable box magazine, 60-round casket magazine and 96-round RPK-16 drum magazines<br>
 Sights<br>
 Adjustable iron sights, front post and rear notch on a scaled tangent <br></p>
-<img src="https://en.m.wikipedia.org/wiki/File:SA80_A2_(L85A2)_5.56mm_Rifle_MOD_45162150.jpg" height="200" width="400">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Modified_LSW_with_new_magazine_SA80_Climate_trial_Kuwait_30-05-2001.jpg/1200px-Modified_LSW_with_new_magazine_SA80_Climate_trial_Kuwait_30-05-2001.jpg" height="200" width="400">
 <p><font color="red">L86LSW</font><br>Type
 Bullpup assault rifle<br>
 Light support weapon (L86 LSW)<br>
