--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ Feed system<br>
 30-round AK-74 and 45-round RPK-74 detachable box magazine, 60-round casket magazine and 96-round RPK-16 drum magazines<br>
 Sights<br>
 Adjustable iron sights, front post and rear notch on a scaled tangent <br></p>
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Modified_LSW_with_new_magazine_SA80_Climate_trial_Kuwait_30-05-2001.jpg/1200px-Modified_LSW_with_new_magazine_SA80_Climate_trial_Kuwait_30-05-2001.jpg" height="200" width="400">
+<img src="" height="200" width="400">
 <p><font color="red">L86LSW</font><br>Type
 Bullpup assault rifle<br>
 Light support weapon (L86 LSW)<br>
@@ -614,7 +614,82 @@ Feed system<br>
 Sights<br>
 Telescopic SUSAT, ACOG and ELCAN LDS scopes, aperture iron sights<br></p>
 <img src="">
-<p><font color="red">MG36</font> <br></p>
+<p><font color="red">MG36</font><br>Type
+Assault rifle<br>
+Carbine (G36K, G36C)<br>
+Light machine gun (MG36)<br>
+Place of origin<br>
+Germany<br>
+Service history<br>
+In service<br>
+1997–present<br>
+Used by<br>
+40+ countries (see Users)<br>
+Wars<br>
+See Conflicts<br>
+Production history<br>
+Designer<br>
+Heckler & Koch<br>
+Designed<br>
+1990–1995<br>
+Manufacturer<br>
+Heckler & Koch<br>
+Santa Bárbara Sistemas<br>
+Military Industries Corporation<br>
+Produced<br>
+G36: 1996–present<br>
+G36K: 1997–present<br>
+G36C: 2001–present<br>
+No. built<br>
+260,000+<br>
+Variants<br>
+See Variants<br>
+Specifications<br>
+Mass<br>
+G36: 3.63 kg (8.00 lb)<br>
+G36V: 3.33 kg (7.3 lb)<br>
+G36K: 3.30 kg (7.3 lb)<br>
+G36KV: 3.0 kg (6.6 lb)<br>
+G36C: 2.82 kg (6.2 lb)<br>
+MG36: 3.83 kg (8.4 lb)<br>
+MG36E: 3.50 kg (7.7 lb)<br>
+Length<br>
+G36, G36V, MG36, MG36E: 999 mm (39.3 in) stock extended / 758 mm (29.8 in) stock folded<br>
+G36K, G36KV: 860 mm (33.9 in) stock extended / 615 mm (24.2 in) stock folded<br>
+G36C: 720 mm (28.3 in) stock extended / 500 mm (19.7 in) stock folded<br>
+Barrel length<br>
+G36, G36V, MG36, MG36E: 480 mm (18.9 in)<br>
+G36K, G36KV: 318 mm (12.5 in)<br>
+G36C: 228 mm (9.0 in)<br>
+Width<br>
+64 mm (2.5 in)<br>
+Height<br>
+G36, G36K, MG36: 320 mm (12.6 in)<br>
+G36V, G36KV, MG36E: 285 mm (11.2 in)<br>
+G36C: 278 mm (10.9 in)<br>
+Cartridge<br>
+5.56×45mm NATO<br>
+Action<br>
+Short-stroke piston, closed rotating bolt<br>
+Rate of fire<br>
+750 rounds/min<br>
+Muzzle velocity<br>
+G36, G36V, MG36, MG36E: 920 m/s (3,018 ft/s)<br>
+G36K, G36KV: 850 m/s (2,788.7 ft/s)<br>
+G36C, G36CV: 722 m/s (2,368.8 ft/s)<br>
+Effective firing range<br>
+G36, G36V, MG36, MG36E: 600 metres (660 yd)<br>
+G36K, G36KV: 450 metres (490 yd)<br>
+G36C, G36CV: 200 metres (220 yd)[1]<br>
+Maximum firing range<br>
+2,860 metres (3,130 yd)<br>
+Feed system<br>
+30-round proprietary detachable box magazine<br>
+100-round C-Mag drum magazine<br>
+STANAG magazines (with optional adaptor)<br>
+Sights<br>
+Reflex sight with 1× magnification, telescopic sight with 3× magnification (export version has a 1.5× magnified sight) and back-up fixed notch sight<br>
+Picatinny rails for various optics (later models)<br></p>
 <img src="">
 <p><font color="red">PKP Pecheneg</font><br> </p>
 <img src="">
