--- a/index.html
+++ b/index.html
@@ -691,7 +691,58 @@ Sights<br>
 Reflex sight with 1× magnification, telescopic sight with 3× magnification (export version has a 1.5× magnified sight) and back-up fixed notch sight<br>
 Picatinny rails for various optics (later models)<br></p>
 <img src="">
-<p><font color="red">PKP Pecheneg</font><br> </p>
+<p><font color="red">PKP Pecheneg</font><br>Type
+Medium machine gun<br>
+General purpose machine gun<br>
+Place of origin<br>
+Russia<br>
+Service history<br>
+In service<br>
+2001–present[1]<br>
+Used by<br>
+See Users<br>
+Wars<br>
+Second Chechen War<br>
+Russo-Georgian War<br>
+Syrian Civil War[2]<br>
+Iraqi Civil War[2]<br>
+Russo-Ukrainian War<br>
+War in Donbas<br>
+Production history<br>
+Designer<br>
+Mikhail Kalashnikov<br>
+Designed<br>
+1995<br>
+Manufacturer<br>
+TsNIITochMash, Degtyaryov Plant<br>
+Variants<br>
+See Variants<br>
+Specifications<br>
+Mass<br>
+8.2 kg (18 lb) without a bipod[3]<br>
+8.7 kg (19 lb) with a bipod<br>
+12.7 kg (28 lb) with an infantry tripod mount[4]<br>
+Length<br>
+1,200 mm (47 in)<br>
+Barrel length<br>
+658 mm (25.9 in)[4]<br>
+Cartridge<br>
+7.62×54mmR[4]<br>
+Action<br>
+Gas-operated[4]<br>
+Rate of fire<br>
+Cyclic rate of fire:<br>
+600–800 rounds/min<br>
+Practical rate of fire:<br>
+166 rounds/min[5]<br>
+Muzzle velocity<br>
+900 m/s (2,953 ft/s)[6]<br>
+Effective firing range<br>
+1,500 m (0.93 mi)[7]<br>
+Maximum firing range<br>
+6,000 m (6,600 yd)<br>
+Feed system<br>
+Belt feed: 100-, 200-, 250-round, non-disintegrating links[6]<br> </p>
 <img src="">
 <p><font color="red">MK46</font><br> </p>
 <img src="">
