--- a/index.html
+++ b/index.html
@@ -744,7 +744,76 @@ Maximum firing range<br>
 Feed system<br>
 Belt feed: 100-, 200-, 250-round, non-disintegrating links[6]<br> </p>
 <img src="">
-<p><font color="red">M60E4</font> <br></p>
+<p><font color="red">M60E4</font><br>Type
+General-purpose machine gun<br>
+Medium machine gun<br>
+Place of origin<br>
+United States<br>
+Service history<br>
+In service<br>
+1957–present<br>
+Used by<br>
+See Users<br>
+Wars<br>
+Vietnam War<br>
+Laotian Civil War<br>
+Dominican Civil War[1]<br>
+Cambodian Civil War<br>
+Moro conflict<br>
+Cambodian–Vietnamese War<br>
+Sino-Vietnamese War[2]<br>
+Salvadoran Civil War<br>
+The Troubles<br>
+Operation Urgent Fury<br>
+Operation Just Cause<br>
+Persian Gulf War<br>
+Operation Gothic Serpent<br>
+War in Afghanistan<br>
+Lebanese Civil War<br>
+Iraq War<br>
+Cambodian–Thai border stand-off<br>
+Colombian armed conflict<br>
+Insurgency in the Philippines<br>
+Bougainville Civil War<br>
+various others<br>
+Production history<br>
+Designed<br>
+1952–1957[3]<br>
+Manufacturer<br>
+Saco Defense<br>
+U.S. Ordnance<br>
+Unit cost<br>
+US$6,000 (M60E3)[4]<br>
+Produced<br>
+1957–present<br>
+Variants<br>
+See Variants<br>
+Specifications<br>
+Mass<br>
+10.5 kg (23.15 lb)<br>
+Length<br>
+1,105 mm (43.5 in)<br>
+Barrel length<br>
+560 mm (22.0 in)<br>
+Cartridge<br>
+7.62×51mm NATO<br>
+Caliber<br>
+7.62 mm (0.308 in)<br>
+Action<br>
+Gas-operated, short-stroke gas piston,[5] opened rotating bolt<br>
+Rate of fire<br>
+550–650 rounds/min[6]<br>
+Muzzle velocity<br>
+2,800 ft/s (853 m/s)<br>
+Effective firing range<br>
+1,200 yd (1,100 m)[4]<br>
+Maximum firing range<br>
+4,073 yd (3,724 m)[4]<br>
+Feed system<br>
+Disintegrating belt with M13 Links<br>
+Sights<br>
+Iron sights<br>
+It was adopted in 1957 and issued to units beginning in 1959. It has served with every branch of the U.S. military and still serves with the armed forces of other states. Its manufacture and continued upgrade for military and commercial purchase continues into the 21st century, although it has been replaced or supplemented in most roles by other designs, most notably the M240 machine gun in U.S. service.[7]<br></p>
 <img src="">
 <p><font color="red">USAS-12</font><br> </p>
 <img src="">
