--- a/index.html
+++ b/index.html
@@ -1191,12 +1191,129 @@ Leupold & Stevens Mark 4</p>
 <p><font color="red">Riot Shield</font><br>A riot shield is a lightweight protection device, typically deployed by police and some military organizations, though also utilized by protestors. Riot shields are typically long enough to cover an average-sized person from the top of the head to the knees, though smaller one-handed models may also be used. They are generally intended to be used in riot control, to protect the user from melee attacks with blunt or edged weapons and also thrown projectiles, or non-lethal weapons such as rubber bullets and water cannons. They can also be used as short-ranged melee weapons to push back the opposing force. Most riot shields do not offer ballistic protection; ballistic shields are instead used in situations where heavily armed resistance is expected.
 
 Riot shields are used in almost every country with a standardized police force and are produced by many companies. Law enforcement often use them in conjunction with a baton. Riot shields made for law enforcement are typically constructed from transparent polycarbonate to enable the bearer to see incoming thrown objects. Riot shields used by protesters are often constructed from improvised materials, such as wood, scrap metal or plastic barrels. While riot shields are shown to be effective in protecting the bearers and preventing protesters from breaking through police lines, their use may actually encourage people to throw objects.[1] </p>
-<img src="">
-<p><font color="red"></font><br> </p>
-<img src="">
-<p><font color="red"></font><br> </p>
-<img src="">
-<p><font color="red"></font> <br></p>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/AWM-338-white.jpg/330px-AWM-338-white.jpg">
+<p><font color="red">AWM</font><br>Type	Bolt action sniper rifle<br>
+Place of origin	United Kingdom<br>
+Service history<br>
+In service	1996–present<br>
+Used by	See Users<br>
+Wars	Afghanistan War<br>
+Iraq War<br>
+Operation Inherent Resolve<br>
+2022 Russian invasion of Ukraine<br>
+Production history<br>
+Manufacturer	Accuracy International<br>
+Produced	1996-2013<br>
+Variants	AWM-F, L115A2, and L115A3 (British Army versions)<br>
+Specifications<br>
+Mass	6.9 kg (15 lb 3 oz)<br>
+Length	1,270 mm (4 ft 2 in)<br>
+Barrel length	686 mm (27.0 in)<br>
+Cartridge	.300 Winchester Magnum .338 Lapua Magnum<br>
+Muzzle velocity	936 m/s (3,070 ft/s)<br>
+Effective firing range	1,100 m (1,200 yd) (.300 Winchester Magnum)<br>
+1,500 m (1,600 yd) (.338 Lapua Magnum)<br>
+Feed system	5-round detachable box magazine<br>
+Sights	Detachable aperture type iron sights day or night optics </p>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/DesertEagle_50AE.jpg/220px-DesertEagle_50AE.jpg">
+<p><font color="red">Desert Eagle</font><br>Type	Semi-automatic pistol<br>
+Place of origin	United States/Israel<br>
+Production history<br>
+Designer	Magnum Research and Israel Military Industries<br>
+Designed	1979–1982<br>
+Manufacturer	Israel Military Industries (1982–1995), Saco Defense (1995–1998), Israel Military Industries (1998–2005), Magnum Research and Israel Weapon Industries (2005–2009), Magnum Research (2009–current)<br>
+Produced	1983–present<br>
+Variants	Mark I (Introduced in 1983)<br>
+Mark VII (Introduced in 1990)<br>
+Mark XIX (Introduced in 1995)<br>
+Specifications<br>
+Mass	<br>
+Mark VII<br>
+3.9 lb (1,769.0 g) (.357 Magnum)<br>
+4.2 lb (1,905.1 g) (.44 Magnum)<br>
+Mark XIX<br>
+4.4 lb (1,995.8 g)<br>
+Length	Mark VII<br>
+10.6 in (269.2 mm) (6in barrel)<br>
+Mark XIX<br>
+10.75 in (273.1 mm) (6 in barrel)<br>
+14.75 in (374.6 mm) (10 in barrel)<br>
+Barrel length	6 in (152.4 mm), 10 in (254.0 mm)<br>
+L5<br>
+5 in (127.0 mm)<br>
+Width	1.25 in (31.8 mm)[1]<br>
+Height	6.25 in (158.8 mm)[1]<br>
+Cartridge	<br>
+.50 Action Express<br>
+.44 Magnum<br>
+.440 Cor-Bon<br>
+.429 DE[2]<br>
+.41 Magnum<br>
+.357 Magnum<br>
+.357/44 Bain & Davis (IMI prototype only)[3]<br>
+Action	Gas-operated, closed rotating bolt<br>
+Muzzle velocity	1542 ft/s (470 m/s) (.50AE)<br>
+Maximum firing range	201 meters (220 yd)<br>
+Feed system	Detachable stick magazine; capacities:<br>
+9 rounds (.357)<br>
+8 rounds (.41 and .44)<br>
+7 rounds (.429 DE, .440 Cor-Bon, and .50 AE)<br>
+Sights	Iron sights and optional optics </p>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/MP_40_AYF_2.JPG/300px-MP_40_AYF_2.JPG">
+<p><font color="red">MP40</font> <br>Type	Submachine gun<br>
+Place of origin	Nazi Germany<br>
+Service history<br>
+In service	1939 – 1945 (Nazi Germany)<br>
+1940 – present (other countries)<br>
+Used by	See Users<br>
+Wars	<br>
+World War II<br>
+Continuation War<br>
+Guerrilla war in the Baltic states<br>
+Greek Civil War<br>
+First Indochina War<br>
+1948 Arab–Israeli War<br>
+Korean War<br>
+Algerian War<br>
+Malayan emergency<br>
+Vietnam War<br>
+West New Guinea dispute<br>
+Rhodesian Bush War<br>
+Lebanese Civil War<br>
+Guatemalan Civil War<br>
+Yugoslav Wars<br>
+Iraq War (limited)<br>
+Syrian Civil War (limited)<br>
+Production history<br>
+Designer	Heinrich Vollmer<br>
+Berthold Geipel<br>
+Designed	1938<br>
+Manufacturer	<br>
+Steyr-Mannlicher[1]<br>
+Erma Werke<br>
+Haenel<br>
+Unit cost	57 ℛ︁ℳ︁ (1940)<br>
+250 EUR current equivalent<br>
+Produced	1940–1945 (MP 40)<br>
+No. built	1,100,000 (estimated)<br>
+Variants	<br>
+MP 36<br>
+MP 38<br>
+MP 40<br>
+MP 40/1<br>
+MP 41<br>
+Specifications<br>
+Mass	3.97 kg (8.75 lb)[2][3]<br>
+Length	833 mm (32.8 in) stock extended/630 mm (24.8 in) stock folded[4]<br>
+Barrel length	251 mm (9.9 in)[4]<br>
+Cartridge	9×19mm Parabellum[4]<br>
+Action	Straight blowback, open bolt[3]<br>
+Rate of fire	500–550 rounds/min[4]<br>
+Muzzle velocity	400 m/s (1,312 ft/s)[4]<br>
+Effective firing range	100–200 m[3]<br>
+Maximum firing range	250 m[3]<br>
+Feed system	32-round detachable box magazine, 64-round with dual magazines[3]<br>
+Sights	Hooded front blade</p>
 <img src="">
 <p><font color="red"></font> <br></p>
 <img src="">
