--- a/index.html
+++ b/index.html
@@ -1314,8 +1314,35 @@ Effective firing range	100–200 m[3]<br>
 Maximum firing range	250 m[3]<br>
 Feed system	32-round detachable box magazine, 64-round with dual magazines[3]<br>
 Sights	Hooded front blade</p>
-<img src="">
-<p><font color="red"></font> <br></p>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/Benelli_m4_2.jpg/300px-Benelli_m4_2.jpg">
+<p><font color="red">M1014</font> <br>Type	Semi-automatic combat shotgun<br>
+Place of origin	Italy<br>
+Service history<br>
+In service	1999–present<br>
+Used by	See Users<br>
+Wars	War in Afghanistan<br>
+Iraq War<br>
+Libyan Civil War<br>
+Syrian Civil War<br>
+Second Libyan Civil War<br>
+Iraqi Civil War<br>
+Production history<br>
+Designer	Benelli Armi SPA<br>
+Designed	1998<br>
+Manufacturer	Benelli Armi SPA<br>
+Produced	1999–present<br>
+Specifications<br>
+Mass	3.82 kg (8.42 lb)<br>
+Length	889 mm (35.0 in) (stock retracted)<br>
+1,010 mm (40 in) (stock extended)<br>
+Barrel length	470 mm (18.5 in)<br>
+Caliber	12-gauge<br>
+Action	Gas-operated, rotating bolt<br>
+Muzzle velocity	408 m/s (1,340 ft/s)<br>
+Effective firing range	55 yd (50 m; 165 ft)[1]<br>
+Maximum firing range	164 yd (150 m; 492 ft) for solid slugs<br>
+Feed system	5+1 (civilian) or 7+1 (Military, LE) tubular magazine (using 2+3⁄4" shells)<br>
+Sights	Ghost ring, Picatinny rail for optical sights</p>
 <img src="">
 <p><font color="red"></font><br> </p>
 <img src="">
