--- a/index.html
+++ b/index.html
@@ -1344,22 +1344,249 @@ Maximum firing range	164 yd (150 m; 492 ft) for solid slugs<br>
 Feed system	5+1 (civilian) or 7+1 (Military, LE) tubular magazine (using 2+3⁄4" shells)<br>
 Sights	Ghost ring, Picatinny rail for optical sights</p>
 <img src="">
-<p><font color="red"></font><br> </p>
+<p><font color="red">AKDAL MKA 1919</font><br>Type
+Shotgun<br>
+Place of origin<br>
+Turkey<br>
+Service history<br>
+In service<br>
+Turkish Land Forces<br>
+Used by<br>
+Turkey<br>
+Production history<br>
+Designer<br>
+Akdal Arms (Ucyildiz Arms A.Ş.)<br>
+Designed<br>
+2006<br>
+Produced<br>
+2007<br>
+Variants<br>
+Civil/Military<br>
+Specifications (Akdal MKA 1919)<br>
+Mass<br>
+3.25 kg (7.2 lb)<br>
+Length<br>
+964 mm (38 in)<br>
+Barrel length<br>
+470 mm (19 in)<br>
+Cartridge<br>
+12 gauge<br>
+Action<br>
+Gas operated, semi-automatic<br>
+Effective firing range<br>
+50 m (55 yd)<br>
+Feed system<br>
+Box magazines <br></p>
 <img src="">
-<p><font color="red"></font> <br></p>
+<p><font color="red">BENELLI SUPERNOVA</font> <br>Type
+Pump action shotgun<br>
+Place of origin<br>
+Italy<br>
+Production history<br>
+Designed<br>
+mid 2000s<br>
+Manufacturer<br>
+Benelli<br>
+Unit cost<br>
+Upwards of $500<br>
+Produced<br>
+2006-present<br>
+Variants<br>
+Nova<br>
+Specifications<br>
+Mass<br>
+7.2 lbs. - 8 lbs. (3.22kg - 3.63kg)<br>
+Length<br>
+40-49.5 in. (1,016.0-1,257.3mm)<br>
+Barrel length<br>
+18-28 in. (457.2-711.2mm)<br>
+Cartridge<br>
+12-gauge shotshell<br>
+Action<br>
+Pump-action<br>
+Feed system<br>
+4+1 internal magazine<br>
+Sights<br>
+Mid: Metal bead<br>
+Front: Red bar<br></p>
 <img src="">
-<p><font color="red"></font><br> </p>
+<p><font color="red">MAG-7</font><br>Type
+Pump-action shotgun<br>
+Place of origin<br>
+South Africa<br>
+Production history<br>
+Designed<br>
+1995<br>
+Produced<br>
+1995–present<br>
+Variants<br>
+MAG-7<br>
+MAG-7M1<br>
+Specifications<br>
+Mass<br>
+4 kg (8.2 lb)<br>
+Length<br>
+550 mm (21.6 in)<br>
+Barrel length<br>
+320 mm (12.6 in)<br>
+Cartridge<br>
+12 gauge (60 mm cartridges)<br>
+Action<br>
+Pump-action<br>
+Effective firing range<br>
+40 m (45 yd)<br>
+Feed system<br>
+5 cartridge removable box magazine [1][2]<br> </p>
 <img src="">
-<p><font color="red"></font><br> </p>
+<p><font color="red">BARRETT M82</font><br>Type
+Anti-materiel rifle<br>
+Place of origin<br>
+United States<br>
+Service history<br>
+In service<br>
+1989–present<br>
+Used by<br>
+See Users<br>
+Wars<br>
+The Troubles<br>
+Soviet-Afghan War<br>
+Gulf War<br>
+Kosovo War<br>
+War in Afghanistan<br>
+Iraq War<br>
+Mexican Drug War<br>
+Second Libyan Civil War<br>
+Russo-Ukrainian War[1]<br>
+Production history<br>
+Designer<br>
+Ronnie Barrett<br>
+Designed<br>
+1980<br>
+Manufacturer<br>
+Barrett Firearms Manufacturing<br>
+Produced<br>
+1982–present<br>
+Specifications<br>
+Mass<br>
+29.7 lb (13.5 kg) to 32.7 lb (14.8 kg)<br>
+Length<br>
+48 in (120 cm) to 57 in (140 cm)<br>
+Barrel length<br>
+20 in (51 cm) to 29 in (74 cm)<br>
+Diameter<br>
+16 mm<br>
+Cartridge<br>
+.50 BMG<br>
+.416 Barrett<br>
+Action<br>
+Recoil-operated<br>
+rotating bolt<br>
+Muzzle velocity<br>
+2,799 ft/s (853 m/s)<br>
+Effective firing range<br>
+1,969 yd (1,800 m)<br>
+Feed system<br>
+5- or 10-round detachable box magazine<br>
+Sights<br>
+Iron sights or various optics on MIL-STD-1913 rail <br></p>
 <img src="">
-<p><font color="red"></font><br> </p>
+<p><font color="red">SKS</font><br>Type
+Semi-automatic rifle<br>
+Place of origin<br>
+Soviet Union<br>
+Service history<br>
+In service<br>
+1945–present<br>
+Used by<br>
+See Users<br>
+Wars<br>
+See Conflicts<br>
+Production history<br>
+Designer<br>
+Sergei Gavrilovich Simonov<br>
+Designed<br>
+1945<br>
+No. built<br>
+5,000,000[1]<br>
+15,000,000+[2]<br>
+Variants<br>
+See Variants<br>
+Specifications<br>
+Mass<br>
+3.85 kg (8.5 lb)[3]<br>
+Length<br>
+1,020 mm (40 in),[3]<br>
+M59/66: 1,120 mm (44 in)<br>
+Barrel length<br>
+520 mm (20 in),[3]<br>
+M59/66: 558.8 mm (22.00 in)<br>
+Cartridge<br>
+7.62×39mm M43[3]<br>
+Action<br>
+Short stroke gas piston, tilting bolt, self-loading<br>
+Rate of fire<br>
+Semi-automatic rate: 35–40 rounds/min[3]<br>
+Muzzle velocity<br>
+735 m/s (2,411 ft/s)[3]<br>
+Effective firing range<br>
+400 metres (440 yd)[3]<br>
+Feed system<br>
+10-round stripper clip,[3] internal box magazine.<br>
+Sights<br>
+Hooded post front sight, tangent notch rear sight graduated from 100 to 1,000 meters.[3]<br> </p>
 <img src="">
-<p><font color="red"></font> <br></p>
+<p><font color="red">KARBINER 98K</font> <br>Type
+Bolt-action rifle<br>
+Place of origin<br>
+Nazi Germany<br>
+Service history<br>
+In service<br>
+1935–present<br>
+Used by<br>
+See Users<br>
+Wars<br>
+See List of conflicts and wars<br>
+Production history<br>
+Designed<br>
+1934<br>
+Manufacturer<br>
+Mauser (augmented by several other makers)<br>
+Unit cost<br>
+55 ℛ︁ℳ︁ (1935)<br>
+250 EUR current equivalent<br>
+Produced<br>
+1934–1945<br>
+No. built<br>
+14,600,000+[1][2]<br>
+Variants<br>
+See Variants<br>
+Specifications<br>
+Mass<br>
+3.7–4.1 kg (8.2–9.0 lb)[3]<br>
+Length<br>
+1,110 mm (43.70 in)<br>
+Barrel length<br>
+600 mm (23.62 in)<br>
+Cartridge<br>
+7.92×57mm Mauser[3]<br>
+Action<br>
+Bolt-action[3]<br>
+Muzzle velocity<br>
+760 m/s (2,493 ft/s)<br>
+Effective firing range<br>
+500 m (550 yd) with iron sights<br>
+≥1,000 m (1,090 yd) with telescopic sight<br>
+Maximum firing range<br>
+4,700 m (5,140 yd) with s.S. Patrone<br>
+Feed system<br>
+5-round stripper clip, internal magazine<br>
+Sights<br>
+Iron sights or telescopic sight.<br></p>
 <img src="">
-<p><font color="red"></font> <br></p>
+<p><font color="red">BLASER R93</font> <br></p>
 <img src="">
-<p><font color="red"></font> <br></p>
+<p><font color="red">CARCANO</font> <br></p>
 <img src="">
-<p><font color="red"></font><br> </p>
+<p><font color="red">BUSHMASTER M17S</font><br> </p>
 </body>
 </html>
