--- a/index.html
+++ b/index.html
@@ -1343,7 +1343,7 @@ Effective firing range	55 yd (50 m; 165 ft)[1]<br>
 Maximum firing range	164 yd (150 m; 492 ft) for solid slugs<br>
 Feed system	5+1 (civilian) or 7+1 (Military, LE) tubular magazine (using 2+3⁄4" shells)<br>
 Sights	Ghost ring, Picatinny rail for optical sights</p>
-<img src="">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Akdal_MKA-1919.JPG/300px-Akdal_MKA-1919.JPG">
 <p><font color="red">AKDAL MKA 1919</font><br>Type
 Shotgun<br>
 Place of origin<br>
@@ -1377,7 +1377,7 @@ Effective firing range<br>
 50 m (55 yd)<br>
 Feed system<br>
 Box magazines <br></p>
-<img src="">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/ARMS_%26_Hunting_2010_exhibition_%28331-09%29.jpg/300px-ARMS_%26_Hunting_2010_exhibition_%28331-09%29.jpg">
 <p><font color="red">BENELLI SUPERNOVA</font> <br>Type
 Pump action shotgun<br>
 Place of origin<br>
@@ -1409,7 +1409,7 @@ Feed system<br>
 Sights<br>
 Mid: Metal bead<br>
 Front: Red bar<br></p>
-<img src="">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Mag7-m1.jpg/300px-Mag7-m1.jpg">
 <p><font color="red">MAG-7</font><br>Type
 Pump-action shotgun<br>
 Place of origin<br>
@@ -1437,7 +1437,7 @@ Effective firing range<br>
 40 m (45 yd)<br>
 Feed system<br>
 5 cartridge removable box magazine [1][2]<br> </p>
-<img src="">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/Barrett-M82A1-Independence-Day-2017-IZE-048-white.jpg/330px-Barrett-M82A1-Independence-Day-2017-IZE-048-white.jpg">
 <p><font color="red">BARRETT M82</font><br>Type
 Anti-materiel rifle<br>
 Place of origin<br>
@@ -1489,7 +1489,7 @@ Feed system<br>
 5- or 10-round detachable box magazine<br>
 Sights<br>
 Iron sights or various optics on MIL-STD-1913 rail <br></p>
-<img src="">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Simonow_SKS_45_noBG.jpg/300px-Simonow_SKS_45_noBG.jpg">
 <p><font color="red">SKS</font><br>Type
 Semi-automatic rifle<br>
 Place of origin<br>
@@ -1534,7 +1534,7 @@ Feed system<br>
 10-round stripper clip,[3] internal box magazine.<br>
 Sights<br>
 Hooded post front sight, tangent notch rear sight graduated from 100 to 1,000 meters.[3]<br> </p>
-<img src="">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Kar_98K_AM021488_noBG.png/300px-Kar_98K_AM021488_noBG.png">
 <p><font color="red">KARBINER 98K</font> <br>Type
 Bolt-action rifle<br>
 Place of origin<br>
@@ -1582,11 +1582,97 @@ Feed system<br>
 5-round stripper clip, internal magazine<br>
 Sights<br>
 Iron sights or telescopic sight.<br></p>
-<img src="">
-<p><font color="red">BLASER R93</font> <br></p>
-<img src="">
-<p><font color="red">CARCANO</font> <br></p>
-<img src="">
-<p><font color="red">BUSHMASTER M17S</font><br> </p>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Blaser_R93_LRS2_.308_Win_4thNovSniperCompetition06.jpg/300px-Blaser_R93_LRS2_.308_Win_4thNovSniperCompetition06.jpg">
+<p><font color="red">BLASER R93</font> <br>Type	Sniper rifle<br>
+Place of origin	Germany<br>
+Service history<br>
+Used by	See Users<br>
+Production history<br>
+Designed	1993<br>
+Manufacturer	Blaser<br>
+Produced	1993–2017<br>
+No. built	200,000+<br>
+Variants	Blaser LRT<br>
+Blaser LRS 2<br>
+Blaser Tactical 2<br>
+Specifications<br>
+Mass	.223 Rem., .308 Win., .300 Win Mag 5.4 kg (12 lb) (empty)<br>
+.338 Lapua Mag. 5.8 kg (13 lb) (empty)<br>
+Barrel length	25" (.223 Rem, .308 Win, .300 Win Mag)[1]<br>
+26.3" (.338 Lapua)[1]<br>
+Caliber	7.62×51mm NATO, .300 Winchester Magnum, .338 Lapua Magnum, 6.5×55mm<br>
+Action	Radial locked straight-pull bolt action<br>
+Feed system	5-round detachable box magazine (4 for .300 Win), Original LRT 10-rounds<br>
+Sights	detachable aperture-type iron sights or day or night optics</p>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Carcano_M1891.jpg/300px-Carcano_M1891.jpg">
+<p><font color="red">CARCANO</font> <br>Type	Bolt-action rifle<br>
+Place of origin	Kingdom of Italy<br>
+Service history<br>
+In service	1891–1981 (Italy)<br>
+1891–present (others)<br>
+Used by	See Users<br>
+Wars	Mahdist War<br>
+First Italo-Ethiopian War<br>
+Boxer Rebellion<br>
+Italo-Turkish War<br>
+World War I<br>
+Vlora War<br>
+Second Italo-Abyssinian War<br>
+Spanish Civil War<br>
+Second Sino-Japanese War<br>
+Winter War<br>
+World War II<br>
+1958 Lebanon crisis<br>
+Bale Revolt<br>
+Lebanese Civil War<br>
+Kosovo War<br>
+Tuareg rebellion<br>
+Libyan Civil War<br>
+Production history<br>
+Designer	Salvatore Carcano<br>
+Designed	1890<br>
+Produced	1891–1945<br>
+No. built	2,063,750–3,000,000 of all variants<br>
+Variants	Long rifle, short rifle, cavalry carbine, special troops' carbine<br>
+See Variants<br>
+Specifications (Fucile mod. 91)<br>
+Mass	Mod. 91: 3.8 kg (8 lb 6 oz)<br>
+Moschetto: 3.16 kg (7.0 lb)<br>
+Moschetto TS: 2.9 kg (6.4 lb)<br>
+Mod. 91/41: 3.72 kg (8.2 lb)<br>
+Mod. 91/38: 3.4 kg (7.5 lb)<br>
+Length	Mod. 91: 1,285 mm (50.6 in)<br>
+Moschetto: 915 mm (36.0 in)<br>
+Mod. 91/41: 1,175 mm (46.3 in)<br>
+Mod. 91/38: 1,018 mm (40.1 in)<br>
+Barrel length	Mod. 91: 780 mm (30.7 in)<br>
+Moschetto: 450 mm (18 in)<br>
+Mod. 91/41: 692 mm (27.2 in)<br>
+Mod. 91/38: 530 mm (21 in)<br>
+Cartridge	<br>
+6.5×52mm Carcano<br>
+7.35×51mm Carcano (Mod.38)<br>
+6.5×54mm Mannlicher–Schönauer<br>
+7.92×57mm Mauser<br>
+6.5×50mm Arisaka (Type I)<br>
+Action	Bolt action<br>
+Muzzle velocity	700 m/s (2,300 ft/s)<br>
+Effective firing range	1,000 m (1,100 yd)<br>
+Feed system	6 round integral magazine, loaded with an en-bloc clip</p>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b3/Bushmaster_M17S_right.jpg/300px-Bushmaster_M17S_right.jpg">
+<p><font color="red">BUSHMASTER M17S</font><br>Type	Bullpup semi-automatic rifle<br>
+Place of origin	Australia<br>
+Production history<br>
+Designed	1992<br>
+Manufacturer	Bushmaster Firearms International<br>
+Produced	1992–2005<br>
+Specifications<br>
+Mass	8.2 lb (3.7 kg)<br>
+Length	30 in (760 mm)<br>
+Barrel length	21.5 in (550 mm)<br>
+Cartridge	5.56×45mm NATO<br>
+Action	Gas-operated rotating bolt<br>
+Feed system	STANAG magazines<br>
+Sights	Iron sights </p>
 </body>
 </html>
