--- a/index.html
+++ b/index.html
@@ -1674,9 +1674,9 @@ Cartridge	5.56×45mm NATO<br>
 Action	Gas-operated rotating bolt<br>
 Feed system	STANAG magazines<br>
 Sights	Iron sights </p>
-  <a href="https://kharanshu53.github.io/index/">Click here to go to main webpage</a>
- <a href="https://patel53.github.io/armsandamunition-1/">Click here to open history and evolution</a>
- <a href="https://kharanshu53.github.io/Guns-Map-Price/">Click here to open map of gun shops</a>
+  <a href="https://kharanshu53.github.io/index/">Click here to go to main webpage</a><br>
+<a href="https://patel53.github.io/armsandamunition-1/">Click here to open history and evolution</a><br>
+ <a href="https://kharanshu53.github.io/Guns-Map-Price/">Click here to open map of gun shops</a><br>
 </body>
 </html>
 </body>
